<resources>
    <string name="app_name">BerceLuxe</string>

    <string name="connecter">Se connecter</string>
    <string name="email">Email</string>
    <string name="password">Mot de passe\n</string>
    <string name="construire_account">Construire un nouveau compte</string>
    <string name="continue_avec_google">Continuer avec Google</string>
    <string name="remember_moi">Se souvenir de moi</string>
    <string name="oublier_password">Mot de passe oublié</string>
    <string name="saisir_email">Saisissez votre email s\'il vous plaît !</string>
    <string name="saisir_email_existant">Saisissez un email d\'un compte existent, s\'il vous plaît!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="incorect">Votre email ou mot de passe incorrect!</string>


    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="accueil">Accueil</string>
    <string name="berceau">Berceau</string>
    <string name="camera">Camera</string>
    <string name="bebe">Bebe</string>
    <string name="client">Client</string>
    <string name="title_activity_homme">HommeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="_0_00">0.00</string>
    <string name="climatiseur">Climatiseur</string>
    <string name="ouvrir">Ouvrir</string>
    <string name="lumiere">Lumiere</string>
    <string name="connexion">Connexion</string>
    <string name="ssid">SSID</string>
    <string name="retour">Retour</string>
    <string name="ajouter">Ajouter</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="suivant">Suivant</string>
    <string name="bienvenue">Bienvenue !</string>
    <string name="welcome1_paragrahpe">Notre application BerceLuxe vous permet de suivre votre enfant</string>
    <string name="welcome2_paragrahpe">Vous pouvez surveiller votre enfant,sa température ,ses mouvements et bien d\'autres fonctionnalités</string>
    <string name="welcome3_paragrahpe">Vous pouvez nous contacter pour de nouveaux ajouts ou corrections des erreurs</string>

    <string name="objective">Objective</string>
    <string name="finalement">Enfin</string>
    <string name="crer_un_compte">creér un compte!?</string>
    <string name="confirmemailString">Comfirmer Votre Email</string>
    <string name="confirmemailmessageString">"Saisissez votre code reçu par l\'email "</string>
    <string name="sendcodeString">Je n\'ai pas reçu de code. Reenvoyer</string>
    <string name="continuee">Continue</string>
    <string name="creation_un_compte">Créer un compte</string>
    <string name="prenom">Prenom</string>
    <string name="nom">Nom</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="userNameString">Nom d\'utilisateur</string>
    <string name="userEmailString">email@email.com</string>
    <string name="accountexistsString">Compte existant</string>
    <string name="alreadyexists">Vous avez déjà un compte !</string>
    <string name="makeAccString">Construire un nouveau compte</string>
    <string name="nouveau_password">Nouveau mot de passe\n</string>
    <string name="saisir_password">Saisir un nouveau mot de passe</string>
    <string name="mise_a_jour">Mise a jour</string>
    <string name="lait">Lait</string>
    <string name="dormir">Dormir</string>
    <string name="repas">Repas</string>
    <string name="couche">Couche</string>
    <string name="ajouter_wifi">Ajouter wifi dans votre berceau ici :</string>
    <string name="deconexion">Déconnexion</string>
    <string name="mouvement">Mouvement</string>
    <string name="bouger">Bouger</string>
    <string name="arreter">Arreter</string>
    <string name="consulter">Consulter</string>
    <string name="temp">Temp :</string>
    <string name="clim">Clim :</string>
    <string name="hum">Humd :</string>
    <string name="fermer">Fermer</string>
    <string name="modeAuto">"Mode : Automatique "</string>
    <string name="modeMan">"Mode : Manuel "</string>


    <string name="temperature_souhaitee">Température souhaitée :</string>
    <string name="saisir_temperature">Entrez la température</string>
    <string name="degrees">°C</string>
    <string name="vitesse">Vitesse :</string>
    <string name="enregistrer">Enregistrer</string>

    <string-array name="vitesse_array">
        <item>Faible</item>
        <item>Moyenne</item>
        <item>Forte</item>
    </string-array>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="intensite">Intensite : </string>
    <string name="nbr_bebe">Nombre des bebes</string>
    <string name="ajouter_bebe">Ajouter un bebe</string>
    <string name="liste_notification">Les notifications</string>
    <string name="liste_berceau">Les Berceaux</string>
    <string name="ajouter_berceau">Ajouter un berceau</string>
    <string name="ventilateur">Ventilateur</string>
    <string name="title_activity_bebe">BebeActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="parent">Parent</string>


</resources>