<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_berceau">

    <fragment
        android:id="@+id/navigation_notification"
        android:name="com.example.appmobile.view.accueil.notification.NotificationFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notification" />

    <fragment
        android:id="@+id/navigation_camera"
        android:name="com.example.appmobile.view.accueil.camera.CameraFragment"
        android:label="@string/camera"
        tools:layout="@layout/fragment_camera" />

    <fragment
        android:id="@+id/navigation_berceau"
        android:name="com.example.appmobile.view.accueil.berceau.BerceauFragment"
        android:label="@string/berceau"
        tools:layout="@layout/fragment_berceau" />

    <fragment
        android:id="@+id/navigation_client"
        android:name="com.example.appmobile.view.accueil.client.ClientFragment"
        android:label="@string/client"
        tools:layout="@layout/fragment_client" />

    <fragment
        android:id="@+id/navigation_bebe"
        android:name="com.example.appmobile.view.accueil.bebe.BebeFragment"
        android:label="@string/bebe"
        tools:layout="@layout/fragment_bebe" />

<!--    <fragment-->
<!--        android:id="@+id/navigation_notification"-->
<!--        android:name="com.example.appmobile.view.accueil.bebe.BebeFragment"-->
<!--        android:label="@string/title_notifications"-->
<!--        tools:layout="@layout/fragment_notification" />-->
</navigation>