<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".view.connexion.CompteExisteActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:text="@string/accountexistsString"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        android:singleLine="true" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/alreadyexists"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/account_exists_img_user"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:src="@drawable/user" />

    <TextView
        android:id="@+id/account_exists_name"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:text="@string/userNameString" />

    <TextView
        android:id="@+id/account_exists_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:textSize="22sp"
        android:text="@string/userEmailString" />


    <TextView
        android:id="@+id/tv_connecter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:text="@string/connecter"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_oublie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:text="@string/oublier_password"
        android:textColor="@color/blue"
        android:layout_margin="5dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:text="@string/makeAccString"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>