<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/back_welcome"
    tools:context=".ui.accueil.home.HomeFragment">

    <TextView
        android:id="@+id/title"
        style="@style/style_tv_title_post"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_home"
         />

    <ImageView
        android:id="@+id/img_welcome"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_margin="20dp"
        app:srcCompat="@drawable/bebe2" />
    <TextView
        android:id="@+id/paragraphe"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ajouter_wifi"
        android:gravity="center"
        android:textColor="@color/gray"
        android:textStyle="bold|italic"
        android:textSize="25sp"
        />

    <Button
        android:id="@+id/btnAJouter"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:singleLine="true"
        android:text="@string/ajouter"
        android:backgroundTint="@color/design_default_color_secondary"
        android:textAppearance="@style/ShapeAppearance.Material3.Corner.Full"
        android:textSize="25sp"
        android:textStyle="bold"
        app:backgroundTint="@null" />
</LinearLayout>